--- a/app/containers/LoginPage/styles.css
+++ b/app/containers/LoginPage/styles.css
@@ -27,9 +27,10 @@
   font-size: 14px;
   cursor: pointer;
   color: #FFF;
+  background-color: #108FE9;
 }
 
 .ablebutton {
   color: #FFF;
-  background-color: #108FE9;
+  background-color: #E3E3E3;
 }
